fix local storage z-index

--- a/assets/app/texts/text.component.less
+++ b/assets/app/texts/text.component.less
@@ -23,6 +23,8 @@
     margin-left: auto;
     margin-right: auto;
     opacity: 0.9;
+    z-index: -70;
+    position: relative;
   }
 
   h1 {
@@ -49,6 +51,8 @@
     max-width: 420px;
     padding: 1vw 2vw;
     opacity: 0.9;
+    z-index: -70;
+    position: relative;
   }
 
   video {
